--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-concat": "2.5.1",
     "gulp-if": "^1.2.5",
     "gulp-sass": "^1.3.3",
+    "gulp-slim": "0.0.13",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "1.1.0",
     "merge-stream": "^0.1.7"
