--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "repository": {},
   "devDependencies": {
     "del": "^1.1.1",
+    "fs-extra": "^0.16.5",
     "gulp": "3.8.11",
     "gulp-coffee": "2.3.1",
     "gulp-concat": "2.5.1",
+    "gulp-copy": "0.0.2",
+    "gulp-debug": "^2.0.1",
     "gulp-if": "^1.2.5",
     "gulp-sass": "^1.3.3",
     "gulp-slim": "0.0.13",
@@ -20,7 +23,8 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
-    "merge-stream": "^0.1.7"
+    "merge-stream": "^0.1.7",
+    "yargs": "^3.5.3"
   },
   "engines": {
     "node": ">=0.10.0"
