--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "repository": {},
   "devDependencies": {
+    "change-case": "^2.2.0",
     "del": "^1.1.1",
-    "fs-extra": "^0.16.5",
     "gulp": "3.8.11",
     "gulp-coffee": "2.3.1",
     "gulp-concat": "2.5.1",
-    "gulp-copy": "0.0.2",
+    "gulp-copy": "kvanwagenen/gulp-copy",
     "gulp-debug": "^2.0.1",
     "gulp-if": "^1.2.5",
     "gulp-sass": "^1.3.3",
