--- a/src/admin/bower.json
+++ b/src/admin/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "~3.3.3"
+    "bootstrap-sass": "~3.3.3",
+    "angular-ui-ace": "bower"
   }
 }
