--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-copy": "kvanwagenen/gulp-copy",
     "gulp-debug": "^2.0.1",
     "gulp-if": "^1.2.5",
+    "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-slim": "0.0.13",
     "gulp-sourcemaps": "^1.3.0",
