--- a/src/core/bower.json
+++ b/src/core/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.17",
+    "angular-route": "~1.3.17",
+    "angular-ui-ace": "~0.2.3"
+  }
 }
